# trimgin

./: Cargo.toml  Makefile  README.md
src/: main.rs
test/: help.txt  main.sh
test/leading_and_trailing_blank/: in.txt  out.txt
test/leading_and_trailing_empty_lines/: in.txt  out.txt
test/leading_blank/: in.txt  out.txt
test/leading_empty_lines/: in.txt  out.txt
test/trailing_blank/: in.txt  out.txt
test/trailing_empty_lines/: in.txt  out.txt
test/un_trimmable/: out.txt
